--- a/Diary/Web.config
+++ b/Diary/Web.config
@@ -24,7 +24,11 @@
   -->
   <system.web>
     <customErrors mode="Off" />
-    <compilation debug="true" targetFramework="4.5" />
+    <compilation debug="true" targetFramework="4.5">
+      <assemblies>
+        <add assembly="System.Runtime, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+      </assemblies>
+    </compilation>
     <httpRuntime />
     <pages controlRenderingCompatibilityVersion="4.0" />
   </system.web>
