--- a/Diary/Diary.csproj
+++ b/Diary/Diary.csproj
@@ -205,6 +205,7 @@
     <Content Include="Views\Posts\Index.cshtml" />
     <Content Include="Scripts\jquery-2.1.4.min.map" />
     <Content Include="Views\Posts\Import.cshtml" />
+    <Content Include="Views\Posts\List.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
